<resources>
    <string name="app_name">GuessCam</string>
    <string name="capture">CAPTURE</string>
    <string name="image">Image</string>
    <string name="detect">DETECT</string>
    <string name="label">Label</string>
    <string name="eraser">Eraser</string>
    <string name="pencil">Pencil</string>
    <string name="pen">Pen</string>
    <string name="sharpner">Sharpner</string>
    <string name="_0">0</string>
</resources>
