<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    android:backgroundTint="@android:color/holo_red_light"
    android:hapticFeedbackEnabled="true"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText4"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:background="@android:color/holo_red_light"
        android:backgroundTint="@android:color/holo_red_light"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textPersonName"
        android:text="@string/eraser"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capturedImage"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="@android:color/holo_red_light"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capturedImage"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:background="@android:color/holo_red_light"
        android:backgroundTint="@android:color/holo_red_light"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textPersonName"
        android:text="@string/pencil"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="@android:color/holo_red_light"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnCamera2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/detect"
        android:textColor="#ffd3ffe5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/capture"
        android:textColor="#ffd3ffe5"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <ImageView
        android:id="@+id/capturedImage"
        android:layout_width="200sp"
        android:layout_height="160sp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <EditText
        android:id="@+id/editText"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:background="@android:color/holo_red_light"
        android:backgroundTint="@android:color/holo_red_light"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textPersonName"
        android:text="@string/pen"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="@android:color/holo_red_light"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:background="@android:color/holo_red_light"
        android:backgroundTint="@android:color/holo_red_light"
        android:ems="10"
        android:hint="@string/label"
        android:inputType="textPersonName"
        android:text="@string/sharpner"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textColorLink="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="4dp"
        android:autofillHints=""
        android:background="#FFFFFF"
        android:backgroundTint="@android:color/holo_red_light"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        tools:targetApi="o" />

</androidx.constraintlayout.widget.ConstraintLayout>